# 687hw2

./: .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  README.org  a.out  cross_entropy.hpp  gridworld.cpp  multi_normal.cpp  multi_normal.hpp
include/: bbo.hpp  cartpole.hpp  conventions.hpp  cross_entropy.hpp  eigen_multi_norm.hpp  grid.hpp  multi_normal.hpp  random_sampling.hpp
src/: bbo.cpp  cartpole.cpp  cross_entropy.cpp  grid.cpp  gridworld.cpp  main.cpp  multi_normal.cpp  random_sampling.cpp
